welcome.lessons.welcome.loopfor.LoopFor.scala.code
while(estSurBiscuit==false){
var nbPas = 0 ;
if(estSurBiscuit==false){
	nbpas = nbpas + 1 
}

	for (k <- 1 to nbPas){
		avance();
	}
	prendBiscuit();
	for (k <- 1 to nbPas){
		recule();
	}
	poseBiscuit();
}
